Start writing experimentacion
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -1498,3 +1498,13 @@ month={Sept},}
   author={Concha, Alejo and Civera, Javier}
 }
 
+@inproceedings{martull2012realistic,
+  title={Realistic CG stereo image dataset with ground truth disparity maps},
+  author={Martull, Sarah and Peris, Martin and Fukui, Kazuhiro},
+  booktitle={ICPR workshop TrakMark2012},
+  volume={111},
+  number={430},
+  pages={117--118},
+  year={2012}
+}
+
